[gd_scene load_steps=6 format=3 uid="uid://cpx2u11tp8h88"]

[ext_resource type="Script" path="res://Scripts/game_ui.gd" id="1_i5exr"]

[sub_resource type="FontVariation" id="FontVariation_plqxt"]

[sub_resource type="LabelSettings" id="LabelSettings_l2beo"]
font = SubResource("FontVariation_plqxt")
font_size = 30
font_color = Color(0.803922, 0.611765, 1, 1)

[sub_resource type="FontVariation" id="FontVariation_ryhy3"]

[sub_resource type="LabelSettings" id="LabelSettings_w4tbb"]
font = SubResource("FontVariation_ryhy3")
font_size = 29
font_color = Color(0.94902, 0.921569, 0.647059, 1)

[node name="GAME_UI" type="CanvasLayer"]
script = ExtResource("1_i5exr")

[node name="Score_Label" type="Label" parent="."]
custom_minimum_size = Vector2(30, 0)
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -47.0
offset_top = 10.0
offset_right = -17.0
offset_bottom = 52.0
grow_horizontal = 0
text = "0"
label_settings = SubResource("LabelSettings_l2beo")

[node name="Status_Label" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -39.5
offset_top = -11.5
offset_right = 39.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Brave CAT"
label_settings = SubResource("LabelSettings_w4tbb")

[node name="Start_Button" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.0
offset_top = 100.0
offset_right = 48.0
offset_bottom = 131.0
grow_horizontal = 2
grow_vertical = 2
text = "Start Game"

[node name="Status_Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="pressed" from="Start_Button" to="." method="_on_button_pressed"]
[connection signal="timeout" from="Status_Timer" to="." method="_on_status_timer_timeout"]
